@@ -1,3 +1,12 @@
+2015-08-25  Hani Benhabiles <hani.benhabiles@greenbone.net>
+
+	* base/openvas_file.c, base/openvas_file.h (openvas_file_md5sum): Remove
+	function.
+
+	* nasl/nasl_grammar.y (file_md5sum): New function. Moved from
+	base/openvavs_file.c.
+	(init_nasl_ctx): Adjust to use new function.
+
 2015-08-21  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* nasl/nasl_crypto.c (nasl_cipher, nasl_cipher_des): New functions.
